# Devpulse

./: CMakeLists.txt  README.md  main.cpp
devpulse-web/: .gitignore  index.html  package-lock.json  package.json
devpulse-web/src/: App.jsx  index.css
devpulse-web/src/components/: DashboardCards.jsx  Leaderboard.jsx  Recommendations.jsx  SyncButton.jsx
include/: api_service.hpp  auth.hpp  cache.hpp  database.hpp  database_manager.hpp  recommender.hpp  storage.hpp  ui.hpp  user_model.hpp
src/: api_service.cpp  auth.cpp  cache.cpp  database.cpp  database_manager.cpp  main.cpp  recommender.cpp  storage.cpp  ui.cpp
